1.instead of newInstance(); 2.add network-ip-availabilities rest api;